[package]
name = "nu_plugin_http_server"
version = "0.1.1"
edition = "2024"
description = "a nushell plugin called http_server"
authors = ["com6235"]

[dependencies]
nu-plugin = { version = "0.103.0" }
nu-protocol = { version = "0.103.0", features = ["plugin"] }
tokio = { path = "./deps/tokio/tokio", features = ["full"] }
axum = { version = "0.8.1" }

[dev-dependencies]
nu-plugin-test-support = { version = "0.103.0" }

[patch.crates-io]
tokio = { path = "./deps/tokio/tokio" }
